styles/styles.css
/* ... */
#button:hover {
  width: 50%;


}
#button:active {
  width: 48%;

}
::selection {
  background-color: #ffc227 ; /* set the highlight color to orange */
  color: black; /* set the text color to white */
}
#socials {
  display: flex;
  opacity: 0%;
  margin-top: 100px;
  transition: margin-top 0.25s,opacity 0.25s ;
  cursor:default;
pointer-events: none;
}

.social-box {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 10px;
  box-sizing: border-box;
  width: 100px;
height: 100px;
background: rgba(255, 255, 255, 0.05);
border: 1px solid #333333;
box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.25);
border-radius: 17px;
margin-right: 20px;
transition: margin-top 0.25s;
transform: translateY(0px);




}

.social-box:hover {
  margin-top: -5px;
  box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.25);

}

.social-icon {
  height: 60px;
}

#discord {
  transition: 0.25s;
}

#discord:active {
  margin-top: -10px;
}
.tooltip {
  animation: tooltip 0.5s ease-in-out forwards;
  -webkit-animation: tooltip 0.5s ease-in-out forwards;
  -webkit-backface-visibility: hidden;

}
#tooltip {
  text-align: center;
  width: 100%;
  position: absolute;
  color: white;
  font-family: Inter, sans-serif;
  top: 0;
  opacity: 0%;
  
}

#Mobile-support {
  visibility: hidden;
  height: 100vh;
  width: 100vw;
  z-index: 98;
  background-color: #000000a4;
  position: absolute;
  backdrop-filter: blur(10px);
  
  padding: 20px;
  display: flex;
  align-items: center;
}

#spotify-player-container {
  position: absolute;
  top:20%;
  transition: 0.25s;
  box-sizing: border-box;
  width: 400px;
  height: 100px;
  background: rgba(255, 255, 255, 0.05);
  border: 1px solid #333333;
  box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.25);
  border-radius: 10px;
  font-family: 'Inter', sans-serif;
  display: flex;
  align-items: center;
  padding: 13px;
}

#spotify-player-container:hover {
  cursor: pointer;
  margin-top: -6px;
  box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.25);
}



.hoverPlayer:active {
  margin-top: -5px;
  transform: scale(0.97);
  box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.25);
}

#cover {
  margin-right: 10px;
  border-radius: 5px;
  height: 100%;
}

#song-details {
  height: 100%;
  padding: 0;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-content: space-between;
  font-size: 10px;
  align-items: flex-start;
  color: aliceblue;
  max-height: 100%;
  margin-top: 0;
  margin-bottom: 0;
}

#song {
  font-size: 1rem;
  font-weight: 700;
  margin-bottom: 0.1rem;
}

#artist {
  font-size: 0.6rem;
  color: rgba(255, 255, 255, 0.697);
  font-weight: 300;
}

#spotify-logo {
  height: 50%;
  margin-right: 5px;
}

@media (max-width: 1280px) {
  /* for mobile devices */
  #terminal-text-container {
    max-width: 40vw;
  }
  #coords {
    font-size: 12px;
  }
  .terminal-text {
    font-size: 12px;
    margin-left: 10px;
  }
  .ml16 {
    font-size: 6vw;
  }

}



@media (max-width: 1040px) {
  #logo {
    opacity: 0%;
    width: 0px;
    margin-right: 0px;
  }
  #terminal-text-container {
    max-width: 60vw;
  }
  #socials {
    transform: scale(0.8);
  }
  #button {

    width: 45%;
    margin-bottom: -1000px;
  }
  #button:hover {
    width: 55%;
    margin-bottom: -1000px;
  }
  #button:active {
    width: 50%;
    margin-bottom: -1000px;
  }
  #coords {
    font-size: 12px;
  }
  .terminal-text {
    font-size: 12px;
    width: 100%;
  }
  .ml16 {
    font-size: 8.5vw;
  }
  #logo-wrapper {
    width: 0px;
    margin-right: 0vw;

  }
  #main-content {
    padding: 10px;
  }
  #strip {
    width: 500px;
    transform: scale(0.6) rotate(-20deg);
    margin-left: -200px

  }
}

@media (max-width: 600px) {
  /* for mobile devices */
  #main-content {
    visibility: hidden;
  }
  #Mobile-support {
    visibility: visible;
  
  }
}

